--- a/google.css
+++ b/google.css
@@ -80,3 +80,13 @@ body {
     width : 500px;
     height: 120px;
 }
+
+.clock{
+    font-size: 50px;
+    font-style: bold;
+    padding-bottom: 50px;
+    position: absolute;
+    top: 5%;
+    padding-left: 18%;
+    color:gray;
+}
